syntax = "proto3";

package test.integration.accesslog;

message FakeAccessLog {
}
